--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <header class="header container">
-        <a class="header-webstudio" href="index.html"
-          >Web<span class="header-studio">Studio</span></a
+        <a class="header-webstudio" href="index.html">
+          <span class="header-web">Web</span>Studio</a
         >
         <nav class="header-nav">
           <ul class="header-menu">
@@ -47,7 +47,7 @@
           </li>
         </ul>
     </header>
-    <main class="main">
+    <main>
       <section class="banner">
           <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
           <button type="button" class="main-button">Замовити послугу</button>
@@ -55,27 +55,27 @@
       <section class="description-section">
         <div class="container">
           <ul class="main-list">
-            <li>
+            <li class="main-list-item">
               <h3 class="main-subheading">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="main-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="main-list-item">
               <h3 class="main-subheading">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="main-description">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="main-list-item">
               <h3 class="main-subheading">ПЛАНУВАННЯ</h3>
               <p class="main-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="main-list-item">
               <h3 class="main-subheading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="main-description">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -121,7 +121,7 @@
         <div class="container">
         <h2 class="section-heading">Наша команда</h2>
           <ul class="main-list-team">
-            <li>
+            <li class="team-item">
               <img
                 src="img/imgg(1).jpg"
                 alt="Наша команда"
@@ -132,7 +132,7 @@
               <h4 class="main-name">Ігор Дем'яненко</h4>
               <p class="main-description-job">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="img/imgg(2).jpg"
                 alt="Наша команда"
@@ -143,7 +143,7 @@
               <h4 class="main-name">Ольга Рєпіна</h4>
               <p class="main-description-job">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="img/imgg(3).jpg"
                 alt="Наша команд"
@@ -154,7 +154,7 @@
               <h4 class="main-name">Микола Тарасов</h4>
               <p class="main-description-job">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="img/imgg(4).jpg"
                 alt="Наша команд"
@@ -176,19 +176,19 @@
         >
         <div class="footer-block"></div>
         <ul class="footer-list">
-          <li>
+          <li class="footer-list-item">
             <a
               href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8"
               class="footer-address"
               >Місто Київ пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
+          <li class="footer-list-item">
             <a href="mailto:info@devstudio.com" class="footer-contact"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="footer-list-item">
             <a href="tel:+380961111111" class="footer-contact"
               >+38 096 111 11 11</a
             >
