--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
 <body>
   <header class="header container">
-    <a class="header-webstudio" href="index.html">Web<span class="header-studio">Studio</span></a>
+    <a class="header-webstudio" href="index.html"><span class="header-web">Web</span>Studio</a>
     <nav class="header-nav">
       <ul class="header-menu">
         <li><a href="index.html" class="header-menu-link">Студія</a></li>
