--- a/portfolio.html
+++ b/portfolio.html
@@ -107,23 +107,32 @@
       </ul>
     </section>
   </main>
-
   <footer class="footer">
     <div class="container">
-      <a href="#" class="footer-webstudio">Web<span class="footer-studio">Studio</span></a>
+      <a class="footer-webstudio" href="#"
+        >Web<span class="footer-studio">Studio</span></a
+      >
+      <div class="footer-block"></div>
       <ul class="footer-list">
-        <li>
-          <a href="https://goo.gl/maps/BeasPpXtZJGkQwrS6" class="footer-address">Місто Київ пр-т Лесі Українки, 26</a>
+        <li class="footer-list-item">
+          <a
+            href="https://goo.gl/maps/LNZbK8tX5sq8bWxk8"
+            class="footer-address"
+            >Місто Київ пр-т Лесі Українки, 26</a
+          >
         </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a>
+        <li class="footer-list-item">
+          <a href="mailto:info@devstudio.com" class="footer-contact"
+            >info@devstudio.com</a
+          >
         </li>
-        <li>
-          <a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a>
+        <li class="footer-list-item">
+          <a href="tel:+380961111111" class="footer-contact"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </div>
   </footer>
 </body>
-
 </html>
