--- a/portfolio.html
+++ b/portfolio.html
@@ -42,18 +42,18 @@
     <section class="button-section">
       <div class="portfolio">
         <ul class="main-button-list">
-          <li><button type="button" class="portfolio-button">Усі</button></li>
+          <li><button type="button" class="portfolio-button"><p class="button-description">Усі</p></button></li>
           <li>
-            <button type="button" class="portfolio-button">Веб-Сайти</button>
+            <button type="button" class="portfolio-button"><p class="button-description">Веб-Сайти</p></button>
           </li>
           <li>
-            <button type="button" class="portfolio-button">Додатки</button>
+            <button type="button" class="portfolio-button"><p class="button-description">Додатки</p></button>
           </li>
           <li>
-            <button type="button" class="portfolio-button">Дизайн</button>
+            <button type="button" class="portfolio-button"><p class="button-description">Дизайн</p></button>
           </li>
           <li>
-            <button type="button" class="portfolio-button">Маркетинг</button>
+            <button type="button" class="portfolio-button"><p class="button-description">Маркетинг</p></button>
           </li>
         </ul>
     </section>
