--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </li>
             <li>
               <img
-                src="img/img.jpg"
+                src="img/box2.jpg"
                 alt="зображення"
                 class="main-image"
                 width="370"
