--- a/index.html
+++ b/index.html
@@ -18,39 +18,45 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@100;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="header container">
-        <a class="header-webstudio" href="index.html">
-          <span class="header-web">Web</span>Studio</a
-        >
-        <nav class="header-nav">
-          <ul class="header-menu">
-            <li><a href="index.html" class="header-menu-link">Студія</a></li>
-            <li>
-              <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
-            </li>
-            <li><a href="#" class="header-menu-link">Контакти</a></li>
-          </ul>
-        </nav>
-        <ul class="header-contact">
+      <a class="header-webstudio" href="index.html">
+        <span class="header-web">Web</span>Studio</a
+      >
+      <nav class="header-nav">
+        <ul class="header-menu">
+          <li><a href="index.html" class="header-menu-link">Студія</a></li>
           <li>
-            <a href="mailto:info@devstudio.com" class="header-contact-link"
-              >info@devstudio.com</a
-            >
+            <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
           </li>
-          <li>
-            <a href="tel:+380961111111" class="header-contact-link"
-              >+38 096 111 11 11</a
-            >
-          </li>
+          <li><a href="#" class="header-menu-link">Контакти</a></li>
         </ul>
+      </nav>
+      <ul class="header-contact">
+        <li class="header-contact-item">
+          <svg class="email-svg">
+            <use href="/icons.svg#icon-email"></use>
+          </svg>
+          <a href="mailto:info@devstudio.com" class="header-contact-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-contact-item">
+          <svg class="phone-svg">
+            <use href="/icons.svg#icon-phone"></use>
+          </svg>
+          <a href="tel:+380961111111" class="header-contact-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
     <main>
       <section class="banner">
-          <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-          <button type="button" class="main-button">Замовити послугу</button>
+        <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <button type="button" class="main-button">Замовити послугу</button>
       </section>
       <section class="description-section">
         <div class="container">
@@ -87,39 +93,39 @@
       </section>
       <section class="photo-section container">
         <h2 class="section-heading">Чим ми займаємося</h2>
-          <ul class="main-list-images">
-            <li>
-              <img
-                src="img/box1.jpg"
-                alt="зображення"
-                class="main-image"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="img/box2.jpg"
-                alt="зображення"
-                class="main-image"
-                width="370"
-                height="294"
-              />
-            </li>
-            <li>
-              <img
-                src="img/box3.jpg"
-                alt="зображення"
-                class="main-image"
-                width="370"
-                height="294"
-              />
-            </li>
-          </ul>
+        <ul class="main-list-images">
+          <li>
+            <img
+              src="img/box1.jpg"
+              alt="зображення"
+              class="main-image"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="img/box2.jpg"
+              alt="зображення"
+              class="main-image"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="img/box3.jpg"
+              alt="зображення"
+              class="main-image"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
       </section>
       <section class="team-section">
         <div class="container">
-        <h2 class="section-heading">Наша команда</h2>
+          <h2 class="section-heading">Наша команда</h2>
           <ul class="main-list-team">
             <li class="team-item">
               <img
@@ -131,6 +137,28 @@
               />
               <h4 class="main-name">Ігор Дем'яненко</h4>
               <p class="main-description-job">Product Designer</p>
+              <ul class="svg-list">
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -142,6 +170,28 @@
               />
               <h4 class="main-name">Ольга Рєпіна</h4>
               <p class="main-description-job">Frontend Developer</p>
+              <ul class="svg-list">
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -153,6 +203,28 @@
               />
               <h4 class="main-name">Микола Тарасов</h4>
               <p class="main-description-job">Marketing</p>
+              <ul class="svg-list">
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -164,13 +236,70 @@
               />
               <h4 class="main-name">Михайло Єрмаков</h4>
               <p class="main-description-job">UI Designer</p>
+              <ul class="svg-list">
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="svg-list-item">
+                  <svg class="icon">
+                    <use href="/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
           </ul>
-      </div>
+        </div>
+      </section>
+      <section class="clients-section container">
+        <h2 class="section-heading">Постійні клієнти</h2>
+        <ul class="clients-list">
+          <li class="clients-list-item">
+            <svg class="client-svg">
+              <use href="/icons.svg#icon-ya_go"></use>
+            </svg>
+          </li>
+          <li class="clients-list-item">
+            <svg class="client-svg">
+              <use href="/icons.svg#icon-company_3"></use>
+            </svg>
+          </li>
+          <li class="clients-list-item">
+            <svg class="client-svg">
+              <use href="/icons.svg#icon-company_2"></use>
+            </svg>
+          </li>
+          <li class="clients-list-item">
+            <svg class="client-svg">
+              <use href="/icons.svg#icon-foster_peters"></use>
+            </svg>
+          </li>
+          <li class="clients-list-item">
+            <svg class="client-svg">
+              <use href="/icons.svg#icon-brand"></use>
+            </svg>
+          </li>
+          <li class="clients-list-item">
+            <svg class="client-svg">
+              <use href="/icons.svg#icon-company"></use>
+            </svg>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-div">
         <a class="footer-webstudio" href="#"
           >Web<span class="footer-studio">Studio</span></a
         >
@@ -194,7 +323,32 @@
             >
           </li>
         </ul>
+         <div class="footer-wrapper">
+        <h5 class="footer-heading">приєднуйтесь</h5>
+        <ul class="footer-svg-list">
+          <li class="footer-svg-list-item">
+            <svg class="icon-footer">
+              <use href="/icons.svg#icon-instagram"></use>
+            </svg>
+          </li>
+          <li class="footer-svg-list-item">
+            <svg class="icon-footer">
+              <use href="/icons.svg#icon-twitter"></use>
+            </svg>
+          </li>
+          <li class="footer-svg-list-item">
+            <svg class="icon-footer">
+              <use href="/icons.svg#icon-facebook"></use>
+            </svg>
+          </li>
+          <li class="footer-svg-list-item">
+            <svg class="icon-footer">
+              <use href="/icons.svg#icon-linkedin"></use>
+            </svg>
+          </li>
+        </ul>
       </div>
+    </div>
     </footer>
   </body>
 </html>
