--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul class="header-contact">
         <li class="header-contact-item">
           <svg class="email-svg">
-            <use href="/icons.svg#icon-email"></use>
+            <use href="./icons.svg#icon-email"></use>
           </svg>
           <a href="mailto:info@devstudio.com" class="header-contact-link"
             >info@devstudio.com</a
@@ -45,7 +45,7 @@
         </li>
         <li class="header-contact-item">
           <svg class="phone-svg">
-            <use href="/icons.svg#icon-phone"></use>
+            <use href="./icons.svg#icon-phone"></use>
           </svg>
           <a href="tel:+380961111111" class="header-contact-link"
             >+38 096 111 11 11</a
@@ -140,22 +140,22 @@
               <ul class="svg-list">
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-instagram"></use>
+                    <use href="./icons.svg#icon-instagram"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-twitter"></use>
+                    <use href="./icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-facebook"></use>
+                    <use href="./icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-linkedin"></use>
+                    <use href="./icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
               </ul>
@@ -173,22 +173,22 @@
               <ul class="svg-list">
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-instagram"></use>
+                    <use href="./icons.svg#icon-instagram"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-twitter"></use>
+                    <use href="./icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-facebook"></use>
+                    <use href="./icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-linkedin"></use>
+                    <use href="./icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
               </ul>
@@ -206,22 +206,22 @@
               <ul class="svg-list">
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-instagram"></use>
+                    <use href="./icons.svg#icon-instagram"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-twitter"></use>
+                    <use href="./icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-facebook"></use>
+                    <use href="./icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-linkedin"></use>
+                    <use href="./icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
               </ul>
@@ -239,22 +239,22 @@
               <ul class="svg-list">
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-instagram"></use>
+                    <use href="./icons.svg#icon-instagram"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-twitter"></use>
+                    <use href="./icons.svg#icon-twitter"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-facebook"></use>
+                    <use href="./icons.svg#icon-facebook"></use>
                   </svg>
                 </li>
                 <li class="svg-list-item">
                   <svg class="icon">
-                    <use href="/icons.svg#icon-linkedin"></use>
+                    <use href="./icons.svg#icon-linkedin"></use>
                   </svg>
                 </li>
               </ul>
@@ -267,32 +267,32 @@
         <ul class="clients-list">
           <li class="clients-list-item">
             <svg class="client-svg">
-              <use href="/icons.svg#icon-ya_go"></use>
+              <use href="./icons.svg#icon-ya_go"></use>
             </svg>
           </li>
           <li class="clients-list-item">
             <svg class="client-svg">
-              <use href="/icons.svg#icon-company_3"></use>
+              <use href="./icons.svg#icon-company_3"></use>
             </svg>
           </li>
           <li class="clients-list-item">
             <svg class="client-svg">
-              <use href="/icons.svg#icon-company_2"></use>
+              <use href="./icons.svg#icon-company_2"></use>
             </svg>
           </li>
           <li class="clients-list-item">
             <svg class="client-svg">
-              <use href="/icons.svg#icon-foster_peters"></use>
+              <use href="./icons.svg#icon-foster_peters"></use>
             </svg>
           </li>
           <li class="clients-list-item">
             <svg class="client-svg">
-              <use href="/icons.svg#icon-brand"></use>
+              <use href="./icons.svg#icon-brand"></use>
             </svg>
           </li>
           <li class="clients-list-item">
             <svg class="client-svg">
-              <use href="/icons.svg#icon-company"></use>
+              <use href="./icons.svg#icon-company"></use>
             </svg>
           </li>
         </ul>
@@ -328,22 +328,22 @@
         <ul class="footer-svg-list">
           <li class="footer-svg-list-item">
             <svg class="icon-footer">
-              <use href="/icons.svg#icon-instagram"></use>
+              <use href="./icons.svg#icon-instagram"></use>
             </svg>
           </li>
           <li class="footer-svg-list-item">
             <svg class="icon-footer">
-              <use href="/icons.svg#icon-twitter"></use>
+              <use href="./icons.svg#icon-twitter"></use>
             </svg>
           </li>
           <li class="footer-svg-list-item">
             <svg class="icon-footer">
-              <use href="/icons.svg#icon-facebook"></use>
+              <use href="./icons.svg#icon-facebook"></use>
             </svg>
           </li>
           <li class="footer-svg-list-item">
             <svg class="icon-footer">
-              <use href="/icons.svg#icon-linkedin"></use>
+              <use href="./icons.svg#icon-linkedin"></use>
             </svg>
           </li>
         </ul>
