--- a/index.html
+++ b/index.html
@@ -55,13 +55,18 @@
     </header>
     <main>
       <section class="banner">
-        <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <h1 class="main-heading">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br>ВАШОГО БІЗНЕСУ</h1>
         <button type="button" class="main-button">Замовити послугу</button>
       </section>
       <section class="description-section">
         <div class="container">
           <ul class="main-list">
             <li class="main-list-item">
+              <div class="svg-div">
+              <svg class="description-svg">
+                <use href="./icons.svg#icon-antenna1"></use>
+              </svg>
+            </div>
               <h3 class="main-subheading">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="main-description">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -69,6 +74,11 @@
               </p>
             </li>
             <li class="main-list-item">
+              <div class="svg-div">
+              <svg class="description-svg">
+                <use href="./icons.svg#icon-clock1"></use>
+              </svg>
+            </div>
               <h3 class="main-subheading">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="main-description">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -76,12 +86,22 @@
               </p>
             </li>
             <li class="main-list-item">
+              <div class="svg-div">
+              <svg class="description-svg">
+                <use href="./icons.svg#icon-diagram1"></use>
+              </svg>
+            </div>
               <h3 class="main-subheading">ПЛАНУВАННЯ</h3>
               <p class="main-description">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="main-list-item">
+              <div class="svg-div">
+              <svg class="description-svg">
+                <use href="./icons.svg#icon-astronaut1"></use>
+              </svg>
+            </div>
               <h3 class="main-subheading">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="main-description">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -300,10 +320,11 @@
     </main>
     <footer class="footer">
       <div class="container footer-div">
+         
         <a class="footer-webstudio" href="#"
           >Web<span class="footer-studio">Studio</span></a
         >
-        <div class="footer-block"></div>
+       <div class="footer-block">
         <ul class="footer-list">
           <li class="footer-list-item">
             <a
