--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,10 @@
 </head>
 
 <body>
-  <header class="header container">
-    <a class="header-webstudio" href="index.html"><span class="header-web">Web</span>Studio</a>
+  <header class="border header container ">
+    <a class="header-webstudio" href="index.html">
+      <span class="header-web">Web</span>Studio</a
+    >
     <nav class="header-nav">
       <ul class="header-menu">
         <li><a href="index.html" class="header-menu-link">Студія</a></li>
@@ -30,11 +32,21 @@
       </ul>
     </nav>
     <ul class="header-contact">
-      <li>
-        <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
+      <li class="header-contact-item">
+        <svg class="email-svg">
+          <use href="./icons.svg#icon-email"></use>
+        </svg>
+        <a href="mailto:info@devstudio.com" class="header-contact-link"
+          >info@devstudio.com</a
+        >
       </li>
-      <li>
-        <a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a>
+      <li class="header-contact-item">
+        <svg class="phone-svg">
+          <use href="./icons.svg#icon-phone"></use>
+        </svg>
+        <a href="tel:+380961111111" class="header-contact-link"
+          >+38 096 111 11 11</a
+        >
       </li>
     </ul>
   </header>
@@ -108,11 +120,12 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
+    <div class="container footer-div">
+       
       <a class="footer-webstudio" href="#"
         >Web<span class="footer-studio">Studio</span></a
       >
-      <div class="footer-block"></div>
+     <div class="footer-block">
       <ul class="footer-list">
         <li class="footer-list-item">
           <a
@@ -132,7 +145,32 @@
           >
         </li>
       </ul>
+       <div class="footer-wrapper">
+      <h5 class="footer-heading">приєднуйтесь</h5>
+      <ul class="footer-svg-list">
+        <li class="footer-svg-list-item">
+          <svg class="icon-footer">
+            <use href="./icons.svg#icon-instagram"></use>
+          </svg>
+        </li>
+        <li class="footer-svg-list-item">
+          <svg class="icon-footer">
+            <use href="./icons.svg#icon-twitter"></use>
+          </svg>
+        </li>
+        <li class="footer-svg-list-item">
+          <svg class="icon-footer">
+            <use href="./icons.svg#icon-facebook"></use>
+          </svg>
+        </li>
+        <li class="footer-svg-list-item">
+          <svg class="icon-footer">
+            <use href="./icons.svg#icon-linkedin"></use>
+          </svg>
+        </li>
+      </ul>
     </div>
+  </div>
   </footer>
 </body>
 </html>
