fix portfolio header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header container">
+    <header class="header">
+     <div class="container header-wrap">
       <a class="header-webstudio" href="index.html">
         <span class="header-web">Web</span>Studio</a
       >
@@ -52,6 +53,7 @@
           >
         </li>
       </ul>
+    </div>
     </header>
     <main>
       <section class="banner">
