--- a/portfolio.html
+++ b/portfolio.html
@@ -18,38 +18,40 @@
 </head>
 
 <body>
-  <header class="border header container ">
-    <a class="header-webstudio" href="index.html">
-      <span class="header-web">Web</span>Studio</a
-    >
-    <nav class="header-nav">
-      <ul class="header-menu">
-        <li><a href="index.html" class="header-menu-link">Студія</a></li>
-        <li>
-          <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
-        </li>
-        <li><a href="#" class="header-menu-link">Контакти</a></li>
-      </ul>
-    </nav>
-    <ul class="header-contact">
-      <li class="header-contact-item">
-        <svg class="email-svg">
-          <use href="./icons.svg#icon-email"></use>
-        </svg>
-        <a href="mailto:info@devstudio.com" class="header-contact-link"
-          >info@devstudio.com</a
-        >
-      </li>
-      <li class="header-contact-item">
-        <svg class="phone-svg">
-          <use href="./icons.svg#icon-phone"></use>
-        </svg>
-        <a href="tel:+380961111111" class="header-contact-link"
-          >+38 096 111 11 11</a
-        >
-      </li>
-    </ul>
-  </header>
+  <header class="header">
+    <div class="container header-wrap">
+     <a class="header-webstudio" href="index.html">
+       <span class="header-web">Web</span>Studio</a
+     >
+     <nav class="header-nav">
+       <ul class="header-menu">
+         <li><a href="index.html" class="header-menu-link">Студія</a></li>
+         <li>
+           <a href="portfolio.html" class="header-menu-link">Портфоліо</a>
+         </li>
+         <li><a href="#" class="header-menu-link">Контакти</a></li>
+       </ul>
+     </nav>
+     <ul class="header-contact">
+       <li class="header-contact-item">
+         <svg class="email-svg">
+           <use href="./icons.svg#icon-email"></use>
+         </svg>
+         <a href="mailto:info@devstudio.com" class="header-contact-link"
+           >info@devstudio.com</a
+         >
+       </li>
+       <li class="header-contact-item">
+         <svg class="phone-svg">
+           <use href="./icons.svg#icon-phone"></use>
+         </svg>
+         <a href="tel:+380961111111" class="header-contact-link"
+           >+38 096 111 11 11</a
+         >
+       </li>
+     </ul>
+   </div>
+   </header>
   <main class="main container">
     <section class="button-section">
       <div class="portfolio">
