--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <section class="photo-section container">
         <h2 class="section-heading">Чим ми займаємося</h2>
         <ul class="main-list-images">
-          <li>
+          <li class="main-list-images-item">
             <img
               src="img/box1.jpg"
               alt="зображення"
@@ -124,8 +124,9 @@
               width="370"
               height="294"
             />
+            <p class="image-label">ДЕСКТОПНІ ДОДАТКИ</p>
           </li>
-          <li>
+          <li class="main-list-images-item">
             <img
               src="img/box2.jpg"
               alt="зображення"
@@ -133,8 +134,9 @@
               width="370"
               height="294"
             />
+            <p class="image-label">МОБІЛЬНІ ДОДАТКИ</p>
           </li>
-          <li>
+          <li class="main-list-images-item">
             <img
               src="img/box3.jpg"
               alt="зображення"
@@ -142,6 +144,7 @@
               width="370"
               height="294"
             />
+            <p class="image-label">ДИЗАЙНЕРСЬКІ РІШЕННЯ</p>
           </li>
         </ul>
       </section>
